# serverVisualProg

./: .env  .env.example  .gitignore  .gitmodules  CMakeLists.txt  DockerServerC  README.md  client.c  client.py  server.c  server.py
include/database/: db_con.h  db_queries.h
include/gui/: gui.h  plots.h
include/models/: structs.h
include/server/: server.h
include/tiles/: tiles.h
servers/: DockerServerGo  DockerServerPython  client.c  client.py  server.c  server.go  servercpp
src/: 123.cpp  main.cpp  server.cpp  servercpp
src/database/: data.json  data.txt  db_con.cpp  db_queries.cpp
src/gui/: gui.cpp  plots.cpp
src/server/: server.cpp
src/tiles/: tiles.cpp
src/utils/: utils.cpp
